[tool.poetry]
name = "llcb"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
