[tool.poetry]
name = "llcb"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
orjson = "^3.10.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiogram = "^3.15.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
